--- a/source/dialogs/image-track-properties/image-track-properties-modal.html
+++ b/source/dialogs/image-track-properties/image-track-properties-modal.html
@@ -69,7 +69,7 @@
                                                 ng-class="{'fa fa-chevron-circle-right': $index == wiModal.selectedRow}"></i>
                                         </td>
                                         <td style="width: 20%">
-                                            <input type="text" ng-model="image.name" class="form-control wi-form-control">
+                                            <input type="text" ng-model="image.name" ng-change="wiModal.onImageChanged($index)" class="form-control wi-form-control" ng-disabled="!image.showName">
                                         </td>
                                         <td style="width: 16%">
                                             <input type="number" min="0" step="0.0001" ng-change="wiModal.onImageChanged($index)" ng-model="image.topDepth" class="form-control wi-form-control">
@@ -110,8 +110,8 @@
                 <p class="dialog-error" ng-if="wiModal.error">Error: {{wiModal.error}}</p>                    
             </div>
             <div class="modal-footer">
-                <button type="button" ng-click="wiModal.onOkButtonClicked()" class="btn btn-default"><span class="ok-16x16"></span>&nbsp;OK</button>
                 <button ng-if="wiModal.isCreated" type="button" ng-click="wiModal.onApplyButtonClicked()" class="btn btn-default"><span class="ok-16x16"></span>&nbsp;Apply</button>
+                <button type="button" ng-click="wiModal.onOkButtonClicked()" class="btn btn-default"><span class="ok-16x16"></span>&nbsp;OK</button>
                 <button type="button" ng-click="wiModal.onCancelButtonClicked()" class="btn btn-default"><span class="close-16x16"></span>&nbsp;Cancel</button>
             </div>
         </div>
