--- a/source/dialogs/reference-windows/reference-windows-modal.html
+++ b/source/dialogs/reference-windows/reference-windows-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" aria-hidden="true">&times;</button>
-                <h4 class="modal-title"><span class="images-properties-16x16"></span>&nbsp;Reference Windows</h4>
+                <h4 class="modal-title"><span class="images-properties-16x16"></span>&nbsp;Reference Window</h4>
             </div>
             <div class="modal-body dialog-style">
                 <p></p>
@@ -12,14 +12,14 @@
                         <div class="col-sm-5">
                             <label class="col-sm-5 font-weight-normal">Top Depth (m)</label>
                             <div class="col-sm-7">
-                                <input type="number" class="form-control wi-form-control" step="any" ng-model="wiModal.props.referenceTopDepth"
+                                <input type="number" class="form-control wi-form-control" step="0.0001" ng-model="wiModal.props.referenceTopDepth"
                                 min="{{wiModal.getTopFromWell()}}">
                             </div>
                         </div>
                         <div class="col-sm-5">
                             <label class="col-sm-5 font-weight-normal">Bottom Depth (m)</label>
                             <div class="col-sm-7">
-                                <input type="number" class="form-control wi-form-control" step="any"
+                                <input type="number" class="form-control wi-form-control" step="0.0001"
                                 ng-model="wiModal.props.referenceBottomDepth" max="{{wiModal.getBottomFromWell()}}">
                             </div>
                         </div>
@@ -39,13 +39,13 @@
                             <label class="col-sm-5 font-weight-normal">Vert. Line Number</label>
                             <div class="col-sm-7">
                                 <input type="number" class="form-control wi-form-control"
-                                ng-model="wiModal.props.referenceVertLineNumber">
+                                ng-model="wiModal.props.referenceVertLineNumber" min='1' step="1">
                             </div>
                         </div>
                         <div class="col-sm-2">
                             <label class="font-weight-normal">
                                 <input type="checkbox" ng-model="wiModal.props.referenceDisplay">
-                                Display
+                                Display Window
                             </label>
                         </div>
                     </div>
