--- a/source/dialogs/crossplot-format/crossplot-format-modal.html
+++ b/source/dialogs/crossplot-format/crossplot-format-modal.html
@@ -107,9 +107,9 @@
                                     <div class="col-sm-2"class="form-control wi-form-control">
                                         <ui-select ng-model="wiModal.crossplotModelProps.pointsets[0].idCurveZ"
                                         ng-change="wiModal.onselectedCurveZChange()">
-                                            <ui-select-match placeholder='Select a curve' allow-clear='true'>{{$select.selected.name}}</ui-select-match>
+                                            <ui-select-match placeholder='Select a curve'>{{$select.selected.name}}</ui-select-match>
                                             <ui-select-choices group-by="'datasetName'"
-                                                repeat='curve.id as curve in wiModal.curvesOnDataset | filter:{name:$select.search} track by curve.id'>
+                                                repeat='curve.id as curve in wiModal.curvesOnDatasetWithBlank | filter:{name:$select.search} track by curve.id'>
                                                     <div class="padding-left-20px">{{curve.properties.name}}</div>
                                             </ui-select-choices>
                                         </ui-select>
@@ -150,7 +150,8 @@
                                             </label>
                                             <div class="col-sm-8">
                                                 <ui-select theme="bootstrap"
-                                                            ng-model="wiModal.crossplotModelProps.pointsets[0].pointSymbol">
+                                                            ng-model="wiModal.crossplotModelProps.pointsets[0].pointSymbol"
+                                                            search-enabled='false'>
                                                     <ui-select-match>
                                                         <div ng-repeat="type in wiModal.selectPointSymbol"
                                                              ng-if="wiModal.crossplotModelProps.pointsets[0].pointSymbol==type">
@@ -196,8 +197,9 @@
                                                 Overlay Lines
                                             </label>
                                             <div class="col-sm-10 padding-left-0" style="left: -10px">
-                                                <ui-select ng-model='wiModal.crossplotModelProps.pointsets[0].idOverlayLine'>
-                                                    <ui-select-match placeholder='Select Overlay Lines' allow-clear='true'>{{$select.selected.name}}</ui-select-match>
+                                                <ui-select ng-model='wiModal.crossplotModelProps.pointsets[0].idOverlayLine'
+                                                ng-disabled="!wiModal.overlayLines.length">
+                                                    <ui-select-match placeholder='Select Overlay Lines'>{{$select.selected.name}}</ui-select-match>
                                                     <ui-select-choices repeat='item.idOverlayLine as item in wiModal.overlayLines | filter: {name:$select.search}'
                                                     >{{item.name}}</ui-select-choices>
                                                 </ui-select>
