--- a/source/dialogs/annotation-properties/annotation-properties-modal.html
+++ b/source/dialogs/annotation-properties/annotation-properties-modal.html
@@ -89,8 +89,8 @@
                     </div>
             </div>
             <div class="modal-footer">
-                <!-- <button type="button" ng-click="wiModal.onApplyButtonClicked()" class="btn btn-default">
-                    <span class="apply-16x16"></span>&nbsp;Apply</button> -->
+                <button type="button" ng-click="wiModal.onApplyButtonClicked()" class="btn btn-default">
+                    <span class="apply-16x16"></span>&nbsp;Apply</button>
                 <button type="button" ng-click="wiModal.onOkButtonClicked()" class="btn btn-default">
                     <span class="ok-16x16"></span>&nbsp;OK</button>
                 <button type="button" ng-click="wiModal.onCancelButtonClicked()" class="btn btn-default">
