--- a/source/dialogs/crossplot-format/crossplot-format-modal.html
+++ b/source/dialogs/crossplot-format/crossplot-format-modal.html
@@ -208,13 +208,9 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-12">
-                                        <div class="form-group">
-                                            <div class="checkbox padding-left-4-percent">
-                                                <input type="checkbox">Standalone Pickett Crossplot
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <label class="col-sm-12">
+                                        <input type="checkbox">Standalone Pickett Crossplot
+                                    </label>
                                 </div>
                                 <div class="row">
                                     <div class="col-sm-2">
