--- a/source/dialogs/color-picker/color-picker-modal.html
+++ b/source/dialogs/color-picker/color-picker-modal.html
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <!-- Modal header -->
       <div class="modal-header">
-        <button type="button" class='close' ng-click="wiModal.close('Canceled')">&times;</button>
+        <button type="button" class='close' ng-click="wiModal.onCancelButtonClicked()">&times;</button>
         <h4 class="modal-title">Color Picker</h4>
       </div>
       <!-- Modal body -->
