--- a/source/dialogs/shading-attribute/shading-attribute-modal.html
+++ b/source/dialogs/shading-attribute/shading-attribute-modal.html
@@ -512,6 +512,9 @@
                 </form>
             </div>
             <div class="modal-footer">
+                <button ng-click="wiModal.onApplyButtonClicked()" class="btn btn-default">
+                    <span class="apply-16x16"></span>&nbsp;Apply
+                </button>
                 <button ng-click="wiModal.onOkButtonClicked()" class="btn btn-default">
                     <span class="ok-16x16"></span>&nbsp;Ok
                 </button>
