--- a/source/dialogs/curve-filter/curve-filter-modal.html
+++ b/source/dialogs/curve-filter/curve-filter-modal.html
@@ -46,7 +46,7 @@
                                 <div class='form-group'>
                                     <label class="col-sm-2">Input Curve</label>
                                     <div class="col-sm-10">
-                                        <ui-select ng-model="wiModal.SelectedCurve" class="normal-text">
+                                        <ui-select ng-model="wiModal.SelectedCurve" class="normal-text" ng-change="wiModal.onChangeCurve()">
                                             <ui-select-match placeholder='Select a curve'>{{wiModal.SelectedCurve.properties.name}}</ui-select-match>
                                             <ui-select-choices group-by="'datasetName'"
                                             repeat='curve in wiModal.curvesArr | filter:{properties: {name:$select.search}} track by curve.id'>
@@ -64,7 +64,8 @@
                                     </div>
                                     <div class="col-sm-5">
                                         <label>
-                                            <input type="radio" name='createOp' value="new" ng-model="wiModal.createOp">&nbsp;Create New/Overwrite Curve
+                                            <input type="radio" name='createOp' value="new" ng-model="wiModal.createOp"
+                                            ng-click="wiModal.onChangeCurve()">&nbsp;Create New/Overwrite Curve
                                         </label>
                                     </div>
                                 </div>
