--- a/source/dialogs/reference-windows/reference-windows-modal.html
+++ b/source/dialogs/reference-windows/reference-windows-modal.html
@@ -12,15 +12,19 @@
                         <div class="col-sm-5">
                             <label class="col-sm-5 font-weight-normal">Top Depth (m)</label>
                             <div class="col-sm-7">
-                                <input type="number" class="form-control wi-form-control" step="0.0001" ng-model="wiModal.props.referenceTopDepth"
+                                <input type="number" class="form-control wi-form-control" step="any"
+                                ng-model="wiModal.props.referenceTopDepth"
+                                ng-blur="wiModal.roundDepth()"
                                 min="{{wiModal.getTopFromWell()}}">
                             </div>
                         </div>
                         <div class="col-sm-5">
                             <label class="col-sm-5 font-weight-normal">Bottom Depth (m)</label>
                             <div class="col-sm-7">
-                                <input type="number" class="form-control wi-form-control" step="0.0001"
-                                ng-model="wiModal.props.referenceBottomDepth" max="{{wiModal.getBottomFromWell()}}">
+                                <input type="number" class="form-control wi-form-control" step="any"
+                                ng-model="wiModal.props.referenceBottomDepth"
+                                ng-blur="wiModal.roundDepth()"                                
+                                max="{{wiModal.getBottomFromWell()}}">
                             </div>
                         </div>
                         <div class="col-sm-2">
@@ -88,12 +92,12 @@
                                         </td>
                                         <td width="20%">
                                             <input type="number" class="form-control wi-form-control"
-                                            ng-model="ref_curve.left" step='1'
+                                            ng-model="ref_curve.left" step='any'
                                             ng-change="wiModal.onRefCurveChange($index)">
                                         </td>
                                         <td width="20%">
                                             <input type="number" class="form-control wi-form-control"
-                                            ng-model="ref_curve.right" step='1'
+                                            ng-model="ref_curve.right" step='any'
                                             ng-change="wiModal.onRefCurveChange($index)">
                                         </td>
                                         <td width="9%">
