--- a/source/dialogs/curve-derivative/curve-derivative-modal.html
+++ b/source/dialogs/curve-derivative/curve-derivative-modal.html
@@ -32,11 +32,11 @@
                                 <div class="form-group">
                                     <label class="col-sm-2">Top Depth</label>
                                     <div class="col-sm-4">
-                                        <input class="form-control wi-form-control" type="number" ng-model="wiModal.topDepth" step="any" min='{{wiModal.selectedWell.properties.topDepth}}'>
+                                        <input class="form-control wi-form-control" type="number" ng-model="wiModal.topDepth" step="any" min='{{wiModal.selectedWell.topDepth}}'>
                                     </div>
                                     <label class="col-sm-2">Botton Depth</label>
                                     <div class="col-sm-2 padding-right-0">
-                                        <input ng-model="wiModal.bottomDepth" type="number" class="form-control wi-form-control" step="any" max='{{wiModal.selectedWell.properties.bottomDepth}}'>
+                                        <input ng-model="wiModal.bottomDepth" type="number" class="form-control wi-form-control" step="any" max='{{wiModal.selectedWell.bottomDepth}}'>
                                     </div>
                                     <div class="col-sm-2">
                                         <button class="btn btn-default wi-form-control width-100-percent" ng-click="wiModal.clickDefault()">Default</button>
